Fixed positioning of chart legend on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -168,12 +168,12 @@ p {
 }
 .col-6:nth-of-type(2) {
 	display: flex;
-	flex: 0 0 60%;
+	flex: 0 0 70%;
 	max-width: none;
 }
 
 .col-6:nth-of-type(1) {
-	flex: 0 0 40%;
+	flex: 0 0 30%;
 }
 
 .icon {
